# Movie-sorting-

./: Cargo.toml  diesel.toml
.sqlx/: query-534014137df4bafe194e34a51f3113936860e646d9e843c1e06d740df9a8bc02.json  query-9131c7e12a52bc6437803bbc1fe84408db0ef9b9d5cd0b054df6807c074ab90e.json
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/: handlers.rs  main.rs  models.rs  routes.rs  state.rs
